[gd_scene load_steps=9 format=3 uid="uid://cdhhxxwra7mat"]

[ext_resource type="Script" uid="uid://boxsta7lrtfoc" path="res://rocket.gd" id="1_gmw6f"]
[ext_resource type="AudioStream" uid="uid://b177xuhe7l8co" path="res://sounds/Wind2.mp3" id="2_4am7p"]
[ext_resource type="PackedScene" uid="uid://cksgilv21uamk" path="res://scenes/bazooka/explosion.tscn" id="2_j42io"]
[ext_resource type="Texture2D" uid="uid://be6eebgxnyg5x" path="res://scenes/bazooka/Rocket_000.png" id="3_j42io"]
[ext_resource type="PackedScene" uid="uid://cx21b00ayjq6f" path="res://scenes/bazooka/rocket_particles.tscn" id="4_4am7p"]
[ext_resource type="Texture2D" uid="uid://3428eh8s24mn" path="res://sprites/ui/CircularProgressBar.png" id="6_dp0fd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dp0fd"]
size = Vector2(57, 112)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_j42io"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Area2D" type="Area2D" node_paths=PackedStringArray("particles")]
script = ExtResource("1_gmw6f")
EXPLOSIVE = ExtResource("2_j42io")
particles = NodePath("GPUParticles2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_dp0fd")

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[node name="BuletFlySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_4am7p")
max_distance = 1000.0
attenuation = 1.1095695

[node name="Rocket000" type="Sprite2D" parent="."]
position = Vector2(3.8146973e-06, -7.6293945e-06)
rotation = 1.5707964
scale = Vector2(3.4292529, 3.4292529)
texture = ExtResource("3_j42io")

[node name="GPUParticles2D" parent="." instance=ExtResource("4_4am7p")]
position = Vector2(0, 57)

[node name="Line2D" type="Line2D" parent="."]
visible = false
position = Vector2(9.536743e-07, -55.4)
rotation = -1.5707964
scale = Vector2(1, 0.166667)
points = PackedVector2Array(-1, -0.6, 5000, -0.6)
width = 20.0
default_color = Color(1, 0, 0, 1)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_j42io")

[node name="Circle" type="TextureProgressBar" parent="."]
offset_left = -150.0
offset_top = -151.0
offset_right = 150.0
offset_bottom = 149.0
fill_mode = 4
texture_under = ExtResource("6_dp0fd")
texture_progress = ExtResource("6_dp0fd")
tint_under = Color(0, 0, 0, 0)
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
